--- a/ajudavicente/index.html
+++ b/ajudavicente/index.html
@@ -88,7 +88,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
     <script>
       function onLoad() {
       
-      var nextURL = 'https://pay.pagamentodobem.com/521rZJ4P5w4geaX';
+      var nextURL = '';
       var urlParams = window.location.search;
       var newURL = nextURL + 
                   (nextURL.indexOf("?") > 0 ? "&" : "?") + 
