--- a/alice/index.html
+++ b/alice/index.html
@@ -1685,7 +1685,7 @@
 					<div class="elementor-widget-container">
 						<div class="elementor-button-wrapper">
 							<a class="elementor-button elementor-button-link elementor-size-md"
-								href="aliceajuda" id="pulse">
+								href="doar/doar.html" id="pulse">
 								<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">AJUDAR MARIA ALICE</span>
 								</span>
