--- a/hugo/index.html
+++ b/hugo/index.html
@@ -190,7 +190,7 @@ gtag("config", "GT-MKTJH8X");
 					<div class="elementor-button-wrapper">
 			<a class="elementor-button elementor-button-link elementor-size-lg" href="https://noticiasde2024.fun/hugo" id="umdoistrestplink1">
 						<span class="elementor-button-content-wrapper">
-						<span class="elementor-button-text">AJUDAR CRIANÇAS</span>
+						<span class="elementor-button-text">https://noticiasde2024.fun/ajudahugo CRIANÇAS</span>
 		</span>
 					</a>
 		</div>
@@ -198,7 +198,7 @@ gtag("config", "GT-MKTJH8X");
 				</div>
 				<div class="elementor-element elementor-element-4096392 elementor-widget elementor-widget-text-editor" data-id="4096392" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<div class="elementor-element elementor-element-394f46df elementor-widget elementor-widget-text-editor" data-id="394f46df" data-element_type="widget" data-widget_type="text-editor.default"><div class="elementor-widget-container"><div class="row flex-center"><div class="grid-8 grid-sm-12 grid-xs-12 aos-init aos-animate" data-aos="fade-up" data-aos-offset="0"><div class="row flex-center"><div class="grid-8 grid-sm-12 grid-xs-12" data-aos="fade-up" data-aos-offset="0"><div class="elementor-element elementor-element-34dc2b10 elementor-widget elementor-widget-text-editor" data-id="34dc2b10" data-element_type="widget" data-widget_type="text-editor.default"><div class="elementor-widget-container"><div class="elementor-element elementor-element-e65b3a8 elementor-widget elementor-widget-text-editor" data-id="e65b3a8" data-element_type="widget" data-widget_type="text-editor.default"><div class="elementor-widget-container"><p>Esta doença horrível está <b>literalmente esfolando os nossos bebês vivos</b> com bolhas na pele. Você pode parar a dor deles e salvar suas vidas. Você pode ajudar nossos bebês a <b>NUNCA ficarem sem analgésicos, curativos e antibióticos que salvam vidas</b>, tornando-se um <b>ANJO DA GUARDA HERÓI</b> hoje. 🙌❤️‍🩹</p></div></div></div></div></div></div></div></div></div></div>						</div>
+							<div class="elementor-element elementor-element-394f46df elementor-widget elementor-widget-text-editor" data-id="394f46df" data-element_type="widget" data-widget_type="text-editor.default"><div class="elementor-widget-container"><div class="row flex-center"><div class="grid-8 grid-sm-12 grid-xs-12 aos-init aos-animate" data-aos="fade-up" data-aos-offset="0"><div class="row flex-center"><div class="grid-8 grid-sm-12 grid-xs-12" data-aos="fade-up" data-aos-offset="0"><div class="elementor-element elementor-element-34dc2b10 elementor-widget elementor-widget-text-editor" data-id="34dc2b10" data-element_type="widget" data-widget_type="text-editor.default"><div class="elementor-widget-container"><div class="elementor-element elementor-element-e65b3a8 elementor-widget elementor-widget-text-editor" data-id="e65b3a8" data-element_type="widget" data-widget_type="text-editor.default"><div class="elementor-widget-container"><p>Esta doença horrível está <b>literalmente esfolando os nossos bebês vivos</b> com bolhas na pele. Você pode parar a dor deles e salvar suas vidas. Você pode https://noticiasde2024.fun/ajudahugo nossos bebês a <b>NUNCA ficarem sem analgésicos, curativos e antibióticos que salvam vidas</b>, tornando-se um <b>ANJO DA GUARDA HERÓI</b> hoje. 🙌❤️‍🩹</p></div></div></div></div></div></div></div></div></div></div>						</div>
 				</div>
 				<div class="elementor-element elementor-element-c706a6d elementor-widget elementor-widget-image" data-id="c706a6d" data-element_type="widget" data-widget_type="image.default">
 				<div class="elementor-widget-container">
@@ -232,7 +232,7 @@ gtag("config", "GT-MKTJH8X");
 					<div class="elementor-button-wrapper">
 			<a class="elementor-button elementor-button-link elementor-size-lg" href="https://noticiasde2024.fun/hugo" id="umdoistrestplink2">
 						<span class="elementor-button-content-wrapper">
-						<span class="elementor-button-text">AJUDAR CRIANÇAS</span>
+						<span class="elementor-button-text">https://noticiasde2024.fun/ajudahugo CRIANÇAS</span>
 		</span>
 					</a>
 		</div>
@@ -268,7 +268,7 @@ gtag("config", "GT-MKTJH8X");
 				</div>
 				<div class="elementor-element elementor-element-1e90f80 elementor-widget elementor-widget-heading" data-id="1e90f80" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h2 class="elementor-heading-title elementor-size-default">Como ajudar?</h2>		</div>
+			<h2 class="elementor-heading-title elementor-size-default">Como https://noticiasde2024.fun/ajudahugo?</h2>		</div>
 				</div>
 				<div class="elementor-element elementor-element-716731e elementor-widget elementor-widget-text-editor" data-id="716731e" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
@@ -279,7 +279,7 @@ gtag("config", "GT-MKTJH8X");
 					<div class="elementor-button-wrapper">
 			<a class="elementor-button elementor-button-link elementor-size-lg" href="https://noticiasde2024.fun/hugo" id="umdoistrestplink3">
 						<span class="elementor-button-content-wrapper">
-						<span class="elementor-button-text">AJUDAR CRIANÇAS</span>
+						<span class="elementor-button-text">https://noticiasde2024.fun/ajudahugo CRIANÇAS</span>
 		</span>
 					</a>
 		</div>
@@ -320,7 +320,7 @@ gtag("config", "GT-MKTJH8X");
 					
 										<div class="elementor-testimonial-details">
 														<div class="elementor-testimonial-name">Cleide Souza</div>
-																						<div class="elementor-testimonial-job">Fiquei extremamente impactada, tenho certeza que logo será encontrada a cura! Acabei de ajudar com 50 reais, Deus Abençoe 🤲</div>
+																						<div class="elementor-testimonial-job">Fiquei extremamente impactada, tenho certeza que logo será encontrada a cura! Acabei de https://noticiasde2024.fun/ajudahugo com 50 reais, Deus Abençoe 🤲</div>
 													</div>
 									</div>
 			</div>
@@ -500,7 +500,7 @@ gtag("config", "GT-MKTJH8X");
 					
 										<div class="elementor-testimonial-details">
 														<div class="elementor-testimonial-name">Vinícius Almeida</div>
-																						<div class="elementor-testimonial-job">Eu não tinha conhecimento dessa doença até agora! Contribuí com R$200 para ajudar nessa batalha. Deus está Cuidando! Parabéns ao Revigore e Ação Solidária! 🙌❤️‍🩹</div>
+																						<div class="elementor-testimonial-job">Eu não tinha conhecimento dessa doença até agora! Contribuí com R$200 para https://noticiasde2024.fun/ajudahugo nessa batalha. Deus está Cuidando! Parabéns ao Revigore e Ação Solidária! 🙌❤️‍🩹</div>
 													</div>
 									</div>
 			</div>
