--- a/hugo/index.html
+++ b/hugo/index.html
@@ -188,9 +188,9 @@ gtag("config", "GT-MKTJH8X");
 				<div class="elementor-element elementor-element-8173497 elementor-align-center elementor-widget elementor-widget-button" data-id="8173497" data-element_type="widget" data-settings="{&quot;ha_floating_fx&quot;:&quot;yes&quot;,&quot;ha_floating_fx_scale_toggle&quot;:&quot;yes&quot;,&quot;ha_floating_fx_scale_duration&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:700,&quot;sizes&quot;:[]},&quot;ha_floating_fx_scale_delay&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:0,&quot;sizes&quot;:[]},&quot;ha_floating_fx_scale_x&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:&quot;&quot;,&quot;sizes&quot;:{&quot;from&quot;:1,&quot;to&quot;:1.2}},&quot;ha_floating_fx_scale_y&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:&quot;&quot;,&quot;sizes&quot;:{&quot;from&quot;:1,&quot;to&quot;:1.2}}}" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-lg" href="https://noticiasde2024.fun/hugo" id="umdoistrestplink1">
+			<a class="elementor-button elementor-button-link elementor-size-lg" href="https://noticiasde2024.fun/ajudahugo" id="umdoistrestplink1">
 						<span class="elementor-button-content-wrapper">
-						<span class="elementor-button-text">https://noticiasde2024.fun/ajudahugo CRIANÇAS</span>
+						<span class="elementor-button-text">AJUDAR CRIANÇAS</span>
 		</span>
 					</a>
 		</div>
@@ -198,7 +198,7 @@ gtag("config", "GT-MKTJH8X");
 				</div>
 				<div class="elementor-element elementor-element-4096392 elementor-widget elementor-widget-text-editor" data-id="4096392" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<div class="elementor-element elementor-element-394f46df elementor-widget elementor-widget-text-editor" data-id="394f46df" data-element_type="widget" data-widget_type="text-editor.default"><div class="elementor-widget-container"><div class="row flex-center"><div class="grid-8 grid-sm-12 grid-xs-12 aos-init aos-animate" data-aos="fade-up" data-aos-offset="0"><div class="row flex-center"><div class="grid-8 grid-sm-12 grid-xs-12" data-aos="fade-up" data-aos-offset="0"><div class="elementor-element elementor-element-34dc2b10 elementor-widget elementor-widget-text-editor" data-id="34dc2b10" data-element_type="widget" data-widget_type="text-editor.default"><div class="elementor-widget-container"><div class="elementor-element elementor-element-e65b3a8 elementor-widget elementor-widget-text-editor" data-id="e65b3a8" data-element_type="widget" data-widget_type="text-editor.default"><div class="elementor-widget-container"><p>Esta doença horrível está <b>literalmente esfolando os nossos bebês vivos</b> com bolhas na pele. Você pode parar a dor deles e salvar suas vidas. Você pode https://noticiasde2024.fun/ajudahugo nossos bebês a <b>NUNCA ficarem sem analgésicos, curativos e antibióticos que salvam vidas</b>, tornando-se um <b>ANJO DA GUARDA HERÓI</b> hoje. 🙌❤️‍🩹</p></div></div></div></div></div></div></div></div></div></div>						</div>
+							<div class="elementor-element elementor-element-394f46df elementor-widget elementor-widget-text-editor" data-id="394f46df" data-element_type="widget" data-widget_type="text-editor.default"><div class="elementor-widget-container"><div class="row flex-center"><div class="grid-8 grid-sm-12 grid-xs-12 aos-init aos-animate" data-aos="fade-up" data-aos-offset="0"><div class="row flex-center"><div class="grid-8 grid-sm-12 grid-xs-12" data-aos="fade-up" data-aos-offset="0"><div class="elementor-element elementor-element-34dc2b10 elementor-widget elementor-widget-text-editor" data-id="34dc2b10" data-element_type="widget" data-widget_type="text-editor.default"><div class="elementor-widget-container"><div class="elementor-element elementor-element-e65b3a8 elementor-widget elementor-widget-text-editor" data-id="e65b3a8" data-element_type="widget" data-widget_type="text-editor.default"><div class="elementor-widget-container"><p>Esta doença horrível está <b>literalmente esfolando os nossos bebês vivos</b> com bolhas na pele. Você pode parar a dor deles e salvar suas vidas. Você pode ajudar nossos bebês a <b>NUNCA ficarem sem analgésicos, curativos e antibióticos que salvam vidas</b>, tornando-se um <b>ANJO DA GUARDA HERÓI</b> hoje. 🙌❤️‍🩹</p></div></div></div></div></div></div></div></div></div></div>						</div>
 				</div>
 				<div class="elementor-element elementor-element-c706a6d elementor-widget elementor-widget-image" data-id="c706a6d" data-element_type="widget" data-widget_type="image.default">
 				<div class="elementor-widget-container">
@@ -230,9 +230,9 @@ gtag("config", "GT-MKTJH8X");
 				<div class="elementor-element elementor-element-fc067a2 elementor-align-center elementor-widget elementor-widget-button" data-id="fc067a2" data-element_type="widget" data-settings="{&quot;ha_floating_fx&quot;:&quot;yes&quot;,&quot;ha_floating_fx_scale_toggle&quot;:&quot;yes&quot;,&quot;ha_floating_fx_scale_duration&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:700,&quot;sizes&quot;:[]},&quot;ha_floating_fx_scale_delay&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:0,&quot;sizes&quot;:[]},&quot;ha_floating_fx_scale_x&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:&quot;&quot;,&quot;sizes&quot;:{&quot;from&quot;:1,&quot;to&quot;:1.2}},&quot;ha_floating_fx_scale_y&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:&quot;&quot;,&quot;sizes&quot;:{&quot;from&quot;:1,&quot;to&quot;:1.2}}}" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-lg" href="https://noticiasde2024.fun/hugo" id="umdoistrestplink2">
+			<a class="elementor-button elementor-button-link elementor-size-lg" href="https://noticiasde2024.fun/ajudahugo" id="umdoistrestplink2">
 						<span class="elementor-button-content-wrapper">
-						<span class="elementor-button-text">https://noticiasde2024.fun/ajudahugo CRIANÇAS</span>
+						<span class="elementor-button-text">AJUDAR CRIANÇAS</span>
 		</span>
 					</a>
 		</div>
@@ -268,7 +268,7 @@ gtag("config", "GT-MKTJH8X");
 				</div>
 				<div class="elementor-element elementor-element-1e90f80 elementor-widget elementor-widget-heading" data-id="1e90f80" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h2 class="elementor-heading-title elementor-size-default">Como https://noticiasde2024.fun/ajudahugo?</h2>		</div>
+			<h2 class="elementor-heading-title elementor-size-default">Como ajudar?</h2>		</div>
 				</div>
 				<div class="elementor-element elementor-element-716731e elementor-widget elementor-widget-text-editor" data-id="716731e" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
@@ -277,9 +277,9 @@ gtag("config", "GT-MKTJH8X");
 				<div class="elementor-element elementor-element-73fdff0 elementor-align-center elementor-widget elementor-widget-button" data-id="73fdff0" data-element_type="widget" data-settings="{&quot;ha_floating_fx&quot;:&quot;yes&quot;,&quot;ha_floating_fx_scale_toggle&quot;:&quot;yes&quot;,&quot;ha_floating_fx_scale_duration&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:700,&quot;sizes&quot;:[]},&quot;ha_floating_fx_scale_delay&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:0,&quot;sizes&quot;:[]},&quot;ha_floating_fx_scale_x&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:&quot;&quot;,&quot;sizes&quot;:{&quot;from&quot;:1,&quot;to&quot;:1.2}},&quot;ha_floating_fx_scale_y&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:&quot;&quot;,&quot;sizes&quot;:{&quot;from&quot;:1,&quot;to&quot;:1.2}}}" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-lg" href="https://noticiasde2024.fun/hugo" id="umdoistrestplink3">
+			<a class="elementor-button elementor-button-link elementor-size-lg" href="https://noticiasde2024.fun/ajudahugo" id="umdoistrestplink3">
 						<span class="elementor-button-content-wrapper">
-						<span class="elementor-button-text">https://noticiasde2024.fun/ajudahugo CRIANÇAS</span>
+						<span class="elementor-button-text">AJUDAR CRIANÇAS</span>
 		</span>
 					</a>
 		</div>
@@ -320,7 +320,7 @@ gtag("config", "GT-MKTJH8X");
 					
 										<div class="elementor-testimonial-details">
 														<div class="elementor-testimonial-name">Cleide Souza</div>
-																						<div class="elementor-testimonial-job">Fiquei extremamente impactada, tenho certeza que logo será encontrada a cura! Acabei de https://noticiasde2024.fun/ajudahugo com 50 reais, Deus Abençoe 🤲</div>
+																						<div class="elementor-testimonial-job">Fiquei extremamente impactada, tenho certeza que logo será encontrada a cura! Acabei de ajudar com 50 reais, Deus Abençoe 🤲</div>
 													</div>
 									</div>
 			</div>
@@ -500,7 +500,7 @@ gtag("config", "GT-MKTJH8X");
 					
 										<div class="elementor-testimonial-details">
 														<div class="elementor-testimonial-name">Vinícius Almeida</div>
-																						<div class="elementor-testimonial-job">Eu não tinha conhecimento dessa doença até agora! Contribuí com R$200 para https://noticiasde2024.fun/ajudahugo nessa batalha. Deus está Cuidando! Parabéns ao Revigore e Ação Solidária! 🙌❤️‍🩹</div>
+																						<div class="elementor-testimonial-job">Eu não tinha conhecimento dessa doença até agora! Contribuí com R$200 para ajudar nessa batalha. Deus está Cuidando! Parabéns ao Revigore e Ação Solidária! 🙌❤️‍🩹</div>
 													</div>
 									</div>
 			</div>
@@ -585,7 +585,7 @@ gtag("config", "GT-MKTJH8X");
 		// Create the skip link.
 		skipLink = document.createElement( 'a' );
 		skipLink.classList.add( 'skip-link', 'screen-reader-text' );
-		skipLink.href = 'https://noticiasde2024.fun/hugo' + skipLinkTargetID;
+		skipLink.href = 'https://noticiasde2024.fun/ajudahugo' + skipLinkTargetID;
 		skipLink.innerHTML = 'Pular para o conteúdo';
 
 		// Inject the skip link.
