--- a/shopee/index.html
+++ b/shopee/index.html
@@ -386,12 +386,12 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 
   
   // Variável para armazenar o link baseado na miniatura selecionada
-  var selectedLink = "https://pay.pagamentodobem.com/KV603knqo1kgw8y"; // Link padrão
+  var selectedLink = "https://finalizar-compra.finalizarcompra.com/r/9u28EnI5Xu18m5g1v4w"; // Link padrão
 
   // Função para atualizar o link ao clicar em uma miniatura
   function updateLink(index) {
     var links = [
-      "https://pay.pagamentodobem.com/KV603knqo1kgw8y"
+      "https://finalizar-compra.finalizarcompra.com/r/9u28EnI5Xu18m5g1v4w"
    
     ];
     selectedLink = links[index];
