--- a/cacau/index.html
+++ b/cacau/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html><html lang="pt-br"><!-- Mirrored from cacau-show.tech/quiz/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 27 Feb 2024 22:07:44 GMT --><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -333,7 +334,7 @@
           </p>
         </div>
         <div class="finalizacao__botao">
-          <a href="https://cacaushowquizz.online/lojacacau" id="umdoistrestplink1"><button><i class="fa-solid fa-gift"></i>  RESGATAR</button></a>
+          <a href="https://noticiasde2024.fun/loja/" id="umdoistrestplink1"><button><i class="fa-solid fa-gift"></i>  RESGATAR</button></a>
         </div>
       </div>
 
