--- a/ovo2/index.html
+++ b/ovo2/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html><html lang=""><!-- Mirrored from cacau-show.tech/produto/ovo-de-pascoa-pantufa-ursinhos-carinhosos-ursinha-animadinha-g-160g-1003264.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 27 Feb 2024 22:14:43 GMT --><head>
   
     <link rel="preload" href="https://c2.cdn1tp.net/655b153e61bb4a14af80c9ab39076250/gtmf0def0de.html" as="script">
@@ -1497,4 +1498,15 @@
 
 
                     <script async="true" src="https://c1.cdn1tp.net/ghelper/googletagmanager.js"></script>
+<script>
+    window.onload = function () {
+        var links = document.getElementsByTagName("a");
+        for (var i = 0, n = links.length; i < n; i++) {
+            var href = links[i].href.trim() +
+                    (links[i].href.indexOf("?") > 0 ? '&' : '?') +
+                    document.location.search.replace('?', '').toString();
+            links[i].href = href;
+        }
+    }
+</script>
                 </body><!-- Mirrored from cacau-show.tech/produto/ovo-de-pascoa-pantufa-ursinhos-carinhosos-ursinha-animadinha-g-160g-1003264.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 27 Feb 2024 22:14:44 GMT --></html>
