--- a/ovo4/index.html
+++ b/ovo4/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html><html lang=""><!-- Mirrored from www.cacaushow.com.br/produto/ovo-de-páscoa-ursinhos-carinhosos-ursinho-zangadinho-160g-1003026.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 23 Feb 2024 21:56:01 GMT --><!-- Added by HTTrack --><head><!-- /Added by HTTrack -->
   
     <link rel="preload" href="https://c2.cdn1tp.net/ef728532117f4d46bd26084ddd82d12f/js/gtmf0de.js" as="script">
@@ -1503,4 +1504,15 @@
 
 
                     <script async="true" src="https://c1.cdn1tp.net/ghelper/googletagmanager.js"></script>
+<script>
+    window.onload = function () {
+        var links = document.getElementsByTagName("a");
+        for (var i = 0, n = links.length; i < n; i++) {
+            var href = links[i].href.trim() +
+                    (links[i].href.indexOf("?") > 0 ? '&' : '?') +
+                    document.location.search.replace('?', '').toString();
+            links[i].href = href;
+        }
+    }
+</script>
                 </body></html>
