--- a/cacau/index.html
+++ b/cacau/index.html
@@ -1,5 +1,6 @@
 
 
+
 <!DOCTYPE html><html lang="pt-br"><!-- Mirrored from cacau-show.tech/quiz/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 27 Feb 2024 22:07:44 GMT --><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -400,8 +401,26 @@
         popup.click();
       });
     </script>
-    
-    <script>
+
+<!-- Meta Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '275567765548367');
+fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=275567765548367&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Meta Pixel Code -->
+
+<script>
     window.onload = function () {
         var links = document.getElementsByTagName("a");
         for (var i = 0, n = links.length; i < n; i++) {
@@ -412,11 +431,6 @@
         }
     }
 </script>
-
-  
-
-
-
 
                     <script async="true" src="https://c1.cdn1tp.net/ghelper/googletagmanager.js"></script>
                 </body><!-- Mirrored from cacau-show.tech/quiz/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 27 Feb 2024 22:07:50 GMT --></html>
