--- a/loja/index.html
+++ b/loja/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html><html lang=""><head>
   
     <link rel="preload" href="https://c2.cdn1tp.net/7da55af9fc4a40f0ac971efacaaa1d91/js/gtmf0de.js" as="script">
@@ -2937,38 +2938,37 @@
     <script type="text/javascript" src="https://c2.cdn1tp.net/7da55af9fc4a40f0ac971efacaaa1d91/js/dwanalytics-22.2.js" async="async" onload="trackPage()"></script>
     <!-- Demandware Active Data (body_end-active_data.js) -->
     <script src="https://c2.cdn1tp.net/7da55af9fc4a40f0ac971efacaaa1d91/js/dwac-21.7.js" type="text/javascript" async="async"></script>
-  <script>
-        let prefix = ["https://cacaushow.fun/", "https://pay.cacaushow.fun/"];
-        function getParams() {
-            let t = "",
-                e = window.top.location.href,
-                r = new URL(e);
-            if (null != r) {
-                let a = r.searchParams.get("utm_source"),
-                    n = r.searchParams.get("utm_medium"),
-                    o = r.searchParams.get("utm_campaign"),
-                    m = r.searchParams.get("utm_term"),
-                    c = r.searchParams.get("utm_content"); - 1 !== e.indexOf("?") && (t = `&sck=${a}|${n}|${o}|${m}|${c}`), console.log(t)
-            }
-            return t
-        } ! function () {
-            var t = new URLSearchParams(window.location.search);
-            t.toString() && document.querySelectorAll("a").forEach(function (e) {
-                for (let r = 0; r < prefix.length; r++) - 1 !== e.href.indexOf(prefix[r]) && (-1 === e.href.indexOf("?") ? e.href += "?" + t.toString() + getParams() : e.href += "&" + t.toString() + getParams())
-            })
-        }();
-    </script>
   
+  
+<!-- Meta Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '275567765548367');
+fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=275567765548367&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Meta Pixel Code -->
 
-
-                    <script async="true" src="https://c1.cdn1tp.net/ghelper/googletagmanager.js"></script>
-                    window.onload = function () {
+<script>
+    window.onload = function () {
         var links = document.getElementsByTagName("a");
-        for (var i = 0, n = links.length; i &lt; n; i++) {
+        for (var i = 0, n = links.length; i < n; i++) {
             var href = links[i].href.trim() +
-                    (links[i].href.indexOf("?") &gt; 0 ? '&amp;' : '?') +
+                    (links[i].href.indexOf("?") > 0 ? '&' : '?') +
                     document.location.search.replace('?', '').toString();
             links[i].href = href;
         }
     }
+</script>
+
+                    <script async="true" src="https://c1.cdn1tp.net/ghelper/googletagmanager.js">
 </body></html>
