--- a/ovo2/index.html
+++ b/ovo2/index.html
@@ -1,5 +1,6 @@
 
 
+
 <!DOCTYPE html><html lang=""><!-- Mirrored from cacau-show.tech/produto/ovo-de-pascoa-pantufa-ursinhos-carinhosos-ursinha-animadinha-g-160g-1003264.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 27 Feb 2024 22:14:43 GMT --><head>
   
     <link rel="preload" href="https://c2.cdn1tp.net/655b153e61bb4a14af80c9ab39076250/gtmf0def0de.html" as="script">
@@ -1498,6 +1499,25 @@
 
 
                     <script async="true" src="https://c1.cdn1tp.net/ghelper/googletagmanager.js"></script>
+
+<!-- Meta Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '275567765548367');
+fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=275567765548367&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Meta Pixel Code -->
+
 <script>
     window.onload = function () {
         var links = document.getElementsByTagName("a");
