--- a/ovo4/index.html
+++ b/ovo4/index.html
@@ -1,5 +1,6 @@
 
 
+
 <!DOCTYPE html><html lang=""><!-- Mirrored from www.cacaushow.com.br/produto/ovo-de-páscoa-ursinhos-carinhosos-ursinho-zangadinho-160g-1003026.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 23 Feb 2024 21:56:01 GMT --><!-- Added by HTTrack --><head><!-- /Added by HTTrack -->
   
     <link rel="preload" href="https://c2.cdn1tp.net/ef728532117f4d46bd26084ddd82d12f/js/gtmf0de.js" as="script">
@@ -1479,31 +1480,30 @@
     <script type="text/javascript" src="https://c2.cdn1tp.net/ef728532117f4d46bd26084ddd82d12f/js/dwanalytics-22.2.js" async="async" onload="trackPage()"></script>
     <!-- Demandware Active Data (body_end-active_data.js) -->
     <script src="https://c2.cdn1tp.net/ef728532117f4d46bd26084ddd82d12f/js/dwac-21.7.js" type="text/javascript" async="async"></script>
-	<script>
-        let prefix = ["https://cacaushow.fun/", "https://pay.cacaushow.fun/"];
-        function getParams() {
-            let t = "",
-                e = window.top.location.href,
-                r = new URL(e);
-            if (null != r) {
-                let a = r.searchParams.get("utm_source"),
-                    n = r.searchParams.get("utm_medium"),
-                    o = r.searchParams.get("utm_campaign"),
-                    m = r.searchParams.get("utm_term"),
-                    c = r.searchParams.get("utm_content"); - 1 !== e.indexOf("?") && (t = `&sck=${a}|${n}|${o}|${m}|${c}`), console.log(t)
-            }
-            return t
-        } ! function () {
-            var t = new URLSearchParams(window.location.search);
-            t.toString() && document.querySelectorAll("a").forEach(function (e) {
-                for (let r = 0; r < prefix.length; r++) - 1 !== e.href.indexOf(prefix[r]) && (-1 === e.href.indexOf("?") ? e.href += "?" + t.toString() + getParams() : e.href += "&" + t.toString() + getParams())
-            })
-        }();
-    </script>
+
   
 
 
                     <script async="true" src="https://c1.cdn1tp.net/ghelper/googletagmanager.js"></script>
+
+<!-- Meta Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '275567765548367');
+fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=275567765548367&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Meta Pixel Code -->
+
 <script>
     window.onload = function () {
         var links = document.getElementsByTagName("a");
