--- a/alice/index.html
+++ b/alice/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html><html lang="pt-BR"><head><meta charset="windows-1252">
 	<title>Esperanï¿½as Para Maria Alice</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1"><meta name="robots" content="max-image-preview:large">
@@ -1328,7 +1329,7 @@
 
 <div class="elementor-element elementor-element-39e990b elementor-widget elementor-widget-heading" data-element_type="widget" data-id="39e990b" data-widget_type="heading.default">
 <div class="elementor-widget-container">
-<h3 class="elementor-heading-title elementor-size-default">Preciso arrecadar 6 milhï¿½es de reais urgentemente.</h3>
+<h3 class="elementor-heading-title elementor-size-default">Preciso arrecadar 6 milhões de reais urgentemente.</h3>
 </div>
 </div>
 
@@ -1336,7 +1337,7 @@
 <div class="elementor-widget-container">
 <div>
 <div data-aos="fade-up" data-aos-offset="0">
-<p><strong>Jï¿½ arrecadamos mais de 2 milhï¿½es e meio atravï¿½s de ONGs.</strong><strong style="color: var( --e-global-color-text ); font-family: var( --e-global-typography-text-font-family ), Sans-serif; background-color: var(--wp--preset--color--base); font-size: var(--wp--preset--font-size--medium);">&nbsp;O remï¿½dio custa em torno de 6 milhï¿½es de reais! Falta exatamente 2 milhï¿½es para conseguirmos o medicamento mais caro do mundo, o Zolgensma, para que minha filha Maria Alice </strong><span style="color: var( --e-global-color-text ); font-family: var( --e-global-typography-text-font-family ), Sans-serif; font-weight: var( --e-global-typography-text-font-weight ); background-color: var(--wp--preset--color--base); font-size: var(--wp--preset--font-size--medium);">tenha uma oportunidade de lutar contra esta doenï¿½a neuromuscular. Preciso urgente dar esse remï¿½dio para a <strong>Maria usar antes de completar 5 anos de idade.</strong></span></p>
+<p><strong>Já arrecadamos mais de 2 milhões e meio através de ONG’s.</strong><strong style="color: var( --e-global-color-text ); font-family: var( --e-global-typography-text-font-family ), Sans-serif; background-color: var(--wp--preset--color--base); font-size: var(--wp--preset--font-size--medium);">O remédio custa em torno de 6 milhões de reais! Falta exatamente 2 milhões para conseguirmos o medicamento mais caro do mundo, o Zolgensma, para que minha filha Maria Alice</strong><span style="color: var( --e-global-color-text ); font-family: var( --e-global-typography-text-font-family ), Sans-serif; font-weight: var( --e-global-typography-text-font-weight ); background-color: var(--wp--preset--color--base); font-size: var(--wp--preset--font-size--medium);"> tenha uma oportunidade de lutar contra esta doença neuromuscular. Preciso urgente dar esse remédio para a <strong>Maria usar antes de completar 5 anos de idade.</strong></span></p>
 </div>
 </div>
 </div>
@@ -1356,7 +1357,7 @@
 <div class="elementor-widget-container">
 <div class="row flex-center">
 <div class="grid-8 grid-sm-12 grid-xs-12 aos-init aos-animate" data-aos="fade-up" data-aos-offset="0">
-<p>Meu nome ï¿½ <strong>David William</strong>, sou pai solteiro e suspeitei que algo estava errado quando depois do aniversï¿½rio de 1 ano da minha filha, ela nï¿½o conseguia sentar sozinha, engatinhar, ficar de pï¿½ ou suportar nenhum tipo de peso nas pernas. Logo depois, ela tambï¿½m perdeu a capacidade de andar.</p>
+<p>Meu nome é <strong>David William</strong>, sou pai solteiro e suspeitei que algo estava errado quando depois do aniversario de 1 ano da minha filha, ela não conseguia sentar sozinha, engatinhar, ficar de pé ou suportar nenhum tipo de peso nas pernas. Logo depois, ela também perdeu a capacidade de andar.</p>
 </div>
 </div>
 </div>
@@ -1366,7 +1367,7 @@
 <div class="elementor-widget-container">
 <div class="row flex-center">
 <div class="grid-8 grid-sm-12 grid-xs-12 aos-init aos-animate" data-aos="fade-up" data-aos-offset="0">
-<p><strong>Maria Alice ï¿½ a minha primeira e ï¿½nica filha.</strong> Ela estava totalmente alerta e feliz, apesar de ter perdido esses movimentos. Eu sabia que tinha algo errado quando ela parecia rejeitar a comida, apesar de estar com fome. Hoje entendo que ela rejeitava a comida porque tinha dificuldades para engolir devido&nbsp;&nbsp;<strong>AME.</strong> Como resultado desta reduï¿½ï¿½o na ingestï¿½o de alimentos, ela tambï¿½m ficou mais magra e fraca.</p>
+<p><strong>Maria Alice é a minha primeira e única filha.</strong> Ela estava totalmente alerta e feliz, apesar de ter perdido esses movimentos. Eu sabia que tinha algo errado quando ela parecia rejeitar a comida, apesar de estar com fome. Hoje entendo que ela rejeitava a comida porque tinha dificuldades para engolir devido&nbsp;&nbsp;<strong>AME.</strong> Como resultado desta redução na ingestão de alimentos, ela também ficou mais magra e fraca.</p>
 </div>
 </div>
 </div>
@@ -1374,13 +1375,13 @@
 
 <div class="elementor-element elementor-element-9260c06 elementor-widget elementor-widget-heading" data-element_type="widget" data-id="9260c06" data-widget_type="heading.default">
 <div class="elementor-widget-container">
-<h4 class="elementor-heading-title elementor-size-default">Apï¿½s alguns exames, os mï¿½dicos diagnosticaram a Maria Alice com AME.</h4>
+<h4 class="elementor-heading-title elementor-size-default">Após alguns exames, os médicos diagnosticaram a Maria Alice com AME.</h4>
 </div>
 </div>
 
 <div class="elementor-element elementor-element-1c3a2586 elementor-widget elementor-widget-heading" data-element_type="widget" data-id="1c3a2586" data-widget_type="heading.default">
 <div class="elementor-widget-container">
-<h2 class="elementor-heading-title elementor-size-default">AME ï¿½ extremamente fatal!</h2>
+<h2 class="elementor-heading-title elementor-size-default">AME é extremamente fatal!</h2>
 </div>
 </div>
 
@@ -1388,7 +1389,7 @@
 <div class="elementor-widget-container">
 <div class="row flex-center">
 <div class="grid-8 grid-sm-12 grid-xs-12 aos-init aos-animate" data-aos="fade-up" data-aos-offset="0">
-<p>A AME ï¿½ uma doenï¿½a que, se nï¿½o for tratada, pode ser fatal para as crianï¿½as, especialmente porque as torna propensas a infecï¿½ï¿½es e falhas respiratï¿½rias.</p>
+<p>A AME é uma doença que, se não for tratada, pode ser fatal para as crianças, especialmente porque as torna propensas a infecções e falhas respiratórias.</p>
 </div>
 </div>
 </div>
@@ -1408,7 +1409,7 @@
 <div class="elementor-widget-container">
 <div class="row flex-center">
 <div class="grid-8 grid-sm-12 grid-xs-12 aos-init aos-animate" data-aos="fade-up" data-aos-offset="0">
-<p><strong>Depois de umas semanas, Maria Alice foi internada no hospital devido a mï¿½ ingestï¿½o alimentar.</strong> Ela comeï¿½ou a engasgar com lï¿½quidos e era arriscado continuar sendo alimentado por via oral.</p>
+<p><strong>Depois de umas semanas, Maria Alice foi internada no hospital devido a má ingestão alimentar.</strong> Ela começou a engasgar com líquidos e era arriscado continuar sendo alimentado por via oral.</p>
 </div>
 </div>
 </div>
@@ -1418,7 +1419,7 @@
 <div class="elementor-widget-container">
 <div class="row flex-center">
 <div class="grid-8 grid-sm-12 grid-xs-12 aos-init aos-animate" data-aos="fade-up" data-aos-offset="0">
-<p>Os mï¿½dicos inseriram uma sonda no nariz para ajudar a Maria Alice a receber a nutriï¿½ï¿½o de que necessita. Sendo uma crianï¿½a curiosa e ativa, <strong>Maria tentou inicialmente puxar o tubo.</strong></p>
+<p>Os médicos inseriram uma sonda no nariz para ajudar a Maria Alice a receber a nutrição de que necessita. Sendo uma criança curiosa e ativa, <strong>Maria tentou inicialmente puxar o tubo.</strong></p>
 </div>
 </div>
 </div>
@@ -1443,9 +1444,9 @@
 <div class="row flex-center">
 <div class="grid-8 grid-sm-12 grid-xs-12 aos-init aos-animate" data-aos="fade-up" data-aos-offset="0">
 <blockquote>
-<p>ï¿½ um pouco incomum e perturbador quando as pessoas olham duas vezes para a <strong>Maria Alice</strong> e fazem certos comentï¿½rios por causa de um tubo pendurado em seu nariz! <strong>Mas aprendemos a ignorar a negatividade e a olhar para o lado positivo da alimentaï¿½ï¿½o nasal.</strong> Ela estï¿½ se beneficiando disso, o que ï¿½ tudo o que importa para nï¿½s como pais no momento.</p>
+<p>É um pouco incomum e perturbador quando as pessoas olham duas vezes para a <strong>Maria Alice</strong> e fazem certos comentários por causa de um tubo pendurado em seu nariz! <strong>Mas aprendemos a ignorar a negatividade e a olhar para o lado positivo da alimentação nasal.</strong> Ela está se beneficiando disso, o que é tudo o que importa para nós como pais no momento.</p>
 
-<p>No entanto, <strong>ela nunca se esquece de sorrir e de nos fazer sorrir tambï¿½m.</strong> Ela nos ensina o que significa ser forte e nos dï¿½ uma razï¿½o para ter esperanï¿½a no amanhï¿½!</p>
+<p>No entanto, <strong>ela nunca se esquece de sorrir e de nos fazer sorrir também.</strong> Ela nos ensina o que significa ser forte e nos dá uma razão para ter  esperança no amanhã!</p>
 </blockquote>
 </div>
 </div>
@@ -1466,17 +1467,17 @@
 <div class="elementor-widget-container">
 <div class="row flex-center">
 <div class="grid-8 grid-sm-12 grid-xs-12 aos-init aos-animate" data-aos="fade-up" data-aos-offset="0">
-<p><strong>Embora nï¿½o haja cura para a AME,</strong> o medicamento mais caro do mundo, o Zolgensma, pode dar a nossa pequena Maria Alice a oportunidade de viver uma vida normal.</p>
+<p><strong>Embora não haja cura para a AME,</strong> o medicamento mais caro do mundo, o Zolgensma, pode dar a nossa pequena Maria Alice a oportunidade de viver uma vida normal.</p>
 
-<p><strong>Mas ï¿½ necessï¿½rio que ele use este remï¿½dio mais rï¿½pido possï¿½vel, antes que a AME cause mais danos irreversï¿½veis ao sistema nervoso dela.</strong></p>
+<p><strong>Mas é necessário que ele use este remédio mais rápido possível, antes que a AME cause mais danos irreversíveis ao sistema nervoso dela.</strong></p>
 
-<p>Resumidamente, <strong>o Zolgensma ajuda a substituir a funï¿½ï¿½o do gene do Neurï¿½nio Motor de Sobrevivï¿½ncia (SMN1) ausente ou nï¿½o funcional.</strong></p>
+<p>Resumidamente, <strong>o Zolgensma ajuda a substituir a função do gene do Neurônio Motor de Sobrevivência (SMN1) ausente ou não funcional.</strong></p>
 
-<p><strong>Nï¿½o temos para quem recorrer, o Governo nï¿½o nos ajuda,</strong> os famosos nï¿½o nos ajudam e <strong>por isso, eu, David William, pai da Maria Alice,</strong> decidi contar a histï¿½ria dela na internet para iniciarmos uma corrente em prol da minha pequena.</p>
+<p><strongNão temos para quem recorrer, o Governo não nos ajuda,</strong> os famosos não nos ajudam e por isso, eu, <strong>por isso, eu, David William, pai da Maria Alice,</strong> decidi contar a história dela na internet para iniciarmos uma corrente em prol da minha pequena.</p>
 
-<p>O desafio ï¿½ bem difï¿½cil, porï¿½m tenho fï¿½ de que as pessoas irï¿½o nos ajudar e Deus irï¿½ abenï¿½oar a minha pequena.</p>
+<p>O desafio é bem difícil, porém tenho fé de que as pessoas irão nos ajudar e Deus irá abençoar a minha pequena.</p>
 
-<p><strong>Me Ajude a arrecadar o valor para o remï¿½dio mais caro do mundo.</strong> Ficarei imensamente agradecido a quem puder contribuir com qualquer quantia ou compartilhar nossa <strong>vaquinha.</strong></p>
+<p><strong>Me Ajude a arrecadar o valor para o remédio mais caro do mundo.</strong> Ficarei imensamente agradecido a quem puder contribuir com qualquer quantia ou compartilhar nossa <strong>vaquinha.</strong></p>
 </div>
 </div>
 </div>
@@ -1498,7 +1499,7 @@
 <div class="row flex-center presell-texto-wrp mb-3" data-aos="fade-up" data-aos-offset="0">
 <div class="grid-8 grid-sm-12 grid-xs-12">
 <div class="md-text presell-texto">
-<p>ï¿½ sï¿½ clicar no botï¿½o abaixo que serï¿½ <strong>direcionado para nossa pï¿½gina de doaï¿½ï¿½es</strong> e lï¿½ vai encontrar os valores que disponibilizamos para realizar a <strong>doaï¿½ï¿½o.</strong></p>
+<p>É só clicar no botão abaixo que será <strong>direcionado para nossa página de doações</strong> e lá vai encontrar os valores que disponibilizamos para realizar a <strong>doação.</strong></p>
 </div>
 </div>
 </div>
@@ -1650,7 +1651,7 @@
 
 <div class="notification">
 <div class="notification-header">
-<h3 class="notification-title"><b>NOVA DOAï¿½ï¿½O</b></h3>
+<h3 class="notification-title"><b>NOVA DOAÇÃO</b></h3>
 </div>
 
 <div class="notification-container">
@@ -1667,9 +1668,9 @@
 <div class="carousel-inner">
 <div class="carousel-item active">
 <div class="container">
-<h1 class="client_taital">Nossas doaï¿½ï¿½es recentes!</h1>
+<h1 class="client_taital">Nossas doações recentes!</h1>
 
-<p class="client_text">Que Deus abenï¿½oe a vida de vocï¿½s e suas famï¿½lias!</p>
+<p class="client_text">Que Deus abençoe a vida de vocês e suas famílias!</p>
 
 <div class="client_section_2">
 <div class="container">
@@ -1679,13 +1680,13 @@
 </div>
 
 <div class="client_right">
-<h2 class="sandy_text"><strong>Antï¿½nia Silva</strong></h2>
+<h2 class="sandy_text"><strong>Antônia Silva</strong></h2>
 
 <p class="long_text"><strong><b>Doou R$25</b></strong></p>
 </div>
 </div>
 
-<p class="dummy_text"><strong>Eu acredito em milagres! Nosso senhor Deus vai ajudar vocï¿½!!! Creia e confie nele!! Se eu pudesse, doava mais para ajudar a nenï¿½m.</strong></p>
+<p class="dummy_text"><strong>Eu acredito em milagres! Nosso senhor Deus vai ajudar você!!! Creia e confie nele!! Se eu pudesse, doava mais para ajudar a neném.</strong></p>
 </div>
 </div>
 </div>
@@ -1711,7 +1712,7 @@
 </div>
 </div>
 
-<p class="dummy_text"><strong>Deus abenï¿½oe a pequena Alice! Estou junto com vocï¿½ nessa causa!</strong></p>
+<p class="dummy_text"><strongDeus abençoe a pequena Alice! Estou junto com você nessa causa!</strong></p>
 </div>
 </div>
 </div>
@@ -1731,13 +1732,13 @@
 </div>
 
 <div class="client_right">
-<h2 class="sandy_text"><strong>Lucilï¿½nia Costa</strong></h2>
+<h2 class="sandy_text"><strong>Lucilânia Costa</strong></h2>
 
 <p class="long_text"><strong><b>Doou R$45</b></strong></p>
 </div>
 </div>
 
-<p class="dummy_text"><strong>Eu tenho filhos e faria tudo por eles! Estou divulgando a campanha com colegas e familiares, vamos todos lhe ajudar a salvar sua filha, creia no espï¿½rito santo de Deus!</strong></p>
+<p class="dummy_text"><strong>Eu tenho filhos e faria tudo por eles! Estou divulgando a campanha com colegas e familiares, vamos todos lhe ajudar a salvar sua filha, creia no espírito santo de Deus!</strong></p>
 </div>
 </div>
 </div>
