--- a/alice/index.html
+++ b/alice/index.html
@@ -1712,7 +1712,7 @@
 </div>
 </div>
 
-<p class="dummy_text"><strongDeus abençoe a pequena Alice! Estou junto com você nessa causa!</strong></p>
+<p class="dummy_text"><strong>Deus aben&ccedil;oe a pequena Alice! Estou junto com voc&ecirc; nessa causa!</strong></p>
 </div>
 </div>
 </div>
