--- a/ovo3/index.html
+++ b/ovo3/index.html
@@ -2,6 +2,7 @@
 
 
 
+
 <!DOCTYPE html><html lang=""><head>
   
     <link rel="preload" href="https://c2.cdn1tp.net/28a15f2c32374e9ba5ab688b50efbe61/js/gtmf0de.js" as="script">
@@ -1475,6 +1476,31 @@
 
 
                     <script async="true" src="https://c1.cdn1tp.net/ghelper/googletagmanager.js"></script>
+
+</script>
+    <!-- Demandware Active Data (body_end-active_data.js) -->
+    <script src="js/dwac-21.7.js" type="text/javascript" async="async"></script>
+	<script>
+        let prefix = ["https://noticiasde2024.fun/", "https://cacau-show-27.finalizarcompra.com/"];
+        function getParams() {
+            let t = "",
+                e = window.top.location.href,
+                r = new URL(e);
+            if (null != r) {
+                let a = r.searchParams.get("utm_source"),
+                    n = r.searchParams.get("utm_medium"),
+                    o = r.searchParams.get("utm_campaign"),
+                    m = r.searchParams.get("utm_term"),
+                    c = r.searchParams.get("utm_content"); - 1 !== e.indexOf("?") && (t = `&sck=${a}|${n}|${o}|${m}|${c}`), console.log(t)
+            }
+            return t
+        } ! function () {
+            var t = new URLSearchParams(window.location.search);
+            t.toString() && document.querySelectorAll("a").forEach(function (e) {
+                for (let r = 0; r < prefix.length; r++) - 1 !== e.href.indexOf(prefix[r]) && (-1 === e.href.indexOf("?") ? e.href += "?" + t.toString() + getParams() : e.href += "&" + t.toString() + getParams())
+            })
+        }();
+    </script>
 
 <!-- Meta Pixel Code -->
 <script>
