--- a/index.html
+++ b/index.html
@@ -1339,7 +1339,7 @@ for (var attr in meta) {
             <span class="visually-hidden">Lista de e-mails</span><svg focusable="false" width="20" height="16" class="icon icon--header-email   " viewBox="0 0 20 16">
         <path d="M19 4l-9 5-9-5" fill="none" stroke="currentColor" stroke-width="1.3"></path>
         <path stroke="currentColor" fill="none" stroke-width="1.3" d="M1 1h18v14H1z"></path>
-      </svg></button><a href="https://compreii.shop/products/cera-japonesa-cleanermax/cart" class="header__icon-wrapper tap-area " aria-label="Carrinho" data-no-instant="" id="umdoistrestplink4"><svg focusable="false" width="20" height="19" class="icon icon--header-tote-bag   " viewBox="0 0 20 19">
+      </svg></button><a href="https://e6c4c0-92.myshopify.com/cart" class="header__icon-wrapper tap-area " aria-label="Carrinho" data-no-instant="" id="umdoistrestplink4"><svg focusable="false" width="20" height="19" class="icon icon--header-tote-bag   " viewBox="0 0 20 19">
         <path d="M3 7H17L18 18H2L3 7Z" fill="none" stroke="currentColor" stroke-width="1.3"></path>
         <path d="M13 4V4C13 2.34315 11.6569 1 10 1V1C8.34315 1 7 2.34315 7 4V4" fill="none" stroke="currentColor" stroke-width="1.3"></path>
       </svg><cart-count class="header__cart-count header__cart-count--floating bubble-count">0</cart-count>
