--- a/index.html
+++ b/index.html
@@ -597,31 +597,31 @@ sizeChartsRelentless.productCollections = [];
     <script src="https://c2.cdn1tp.net/059a7606121f474fa3383f7eaf15dad4/js/theme.min.js" defer=""></script>
     <script src="https://c2.cdn1tp.net/059a7606121f474fa3383f7eaf15dad4/js/custom.js" defer=""></script>
 
-    <script>window.performance && window.performance.mark && window.performance.mark('shopify.content_for_header.start');</script><meta id="shopify-digital-wallet" name="shopify-digital-wallet" content="/85882241310/digital_wallets/dialog">
-<meta name="shopify-checkout-api-token" content="28251a84a8da5dc23669f0af0b044371">
-<meta id="in-context-paypal-metadata" data-shop-id="85882241310" data-venmo-supported="false" data-environment="production" data-locale="pt_BR" data-paypal-v4="true" data-currency="BRL">
-<link rel="alternate" type="application/json+oembed" href="https://compreii.shop/products/cera-japonesa-cleanermax.oembed">
-<script async="async" src="https://c2.cdn1tp.net/059a7606121f474fa3383f7eaf15dad4/js/preloads_1.js"></script>
-<script async="async" src="https://c2.cdn1tp.net/059a7606121f474fa3383f7eaf15dad4/js/preloads.js" crossorigin="anonymous"></script>
-<script id="shopify-features" type="application/json">{"accessToken":"28251a84a8da5dc23669f0af0b044371","betas":["rich-media-storefront-analytics"],"domain":"compreii.shop","predictiveSearch":true,"shopId":85882241310,"smart_payment_buttons_url":"https:\/\/compreii.shop\/cdn\/shopifycloud\/payment-sheet\/assets\/latest\/spb.pt-br.js","dynamic_checkout_cart_url":"https:\/\/compreii.shop\/cdn\/shopifycloud\/payment-sheet\/assets\/latest\/dynamic-checkout-cart.pt-br.js","dynamic_checkout_cart_button_sizes":{"maxWidth":500,"minWidth":140},"locale":"pt-br","flg4ff40b22":false}</script>
+<script>window.performance && window.performance.mark && window.performance.mark('shopify.content_for_header.start');</script><meta id="shopify-digital-wallet" name="shopify-digital-wallet" content="/87057629496/digital_wallets/dialog">
+<meta name="shopify-checkout-api-token" content="905878f8ec29d948b144ad16e668f042">
+<meta id="in-context-paypal-metadata" data-shop-id="87057629496" data-venmo-supported="false" data-environment="production" data-locale="pt_BR" data-paypal-v4="true" data-currency="BRL">
+<link rel="alternate" type="application/json+oembed" href="https://e6c4c0-92.myshopify.com/products/compre-1-leve2-cera-japonesa-cleanermax-2024-25.oembed">
+<script async="async" data-src="/checkouts/internal/preloads.js?locale=pt-BR"></script>
+<script async="async" data-src="https://shop.app/checkouts/internal/preloads.js?locale=pt-BR&shop_id=87057629496" crossorigin="anonymous"></script>
+<script id="shopify-features" type="application/json">{"accessToken":"905878f8ec29d948b144ad16e668f042","betas":["rich-media-storefront-analytics"],"domain":"e6c4c0-92.myshopify.com","predictiveSearch":true,"shopId":87057629496,"smart_payment_buttons_url":"https:\/\/e6c4c0-92.myshopify.com\/cdn\/shopifycloud\/payment-sheet\/assets\/latest\/spb.pt-br.js","dynamic_checkout_cart_url":"https:\/\/e6c4c0-92.myshopify.com\/cdn\/shopifycloud\/payment-sheet\/assets\/latest\/dynamic-checkout-cart.pt-br.js","dynamic_checkout_cart_button_sizes":{"maxWidth":500,"minWidth":140},"locale":"pt-br","flg4ff40b22":false}</script>
 <script>var Shopify = Shopify || {};
-Shopify.shop = "87471f-4.myshopify.com";
+Shopify.shop = "e6c4c0-92.myshopify.com";
 Shopify.locale = "pt-BR";
 Shopify.currency = {"active":"BRL","rate":"1.0"};
 Shopify.country = "BR";
-Shopify.theme = {"name":"sabino-v5-nichado-1","id":165391302942,"theme_store_id":null,"role":"main"};
+Shopify.theme = {"name":"Tema_amazon_2.0","id":166788825400,"theme_store_id":null,"role":"main"};
 Shopify.theme.handle = "null";
 Shopify.theme.style = {"id":null,"handle":null};
-Shopify.cdnHost = "compreii.shop/cdn";
+Shopify.cdnHost = "e6c4c0-92.myshopify.com/cdn";
 Shopify.routes = Shopify.routes || {};
 Shopify.routes.root = "/";</script>
 <script type="module">!function(o){(o.Shopify=o.Shopify||{}).modules=!0}(window);</script>
 <script>!function(o){function n(){var o=[];function n(){o.push(Array.prototype.slice.apply(arguments))}return n.q=o,n}var t=o.Shopify=o.Shopify||{};t.loadFeatures=n(),t.autoloadFeatures=n()}(window);</script>
-<script id="__st">var __st={"a":85882241310,"offset":-10800,"reqid":"c7c81bf6-f8d6-47d6-9355-e7662f1fb0b5-1710333043","pageurl":"compreii.shop\/products\/cera-japonesa-cleanermax?fbclid=IwAR0OF6QUYeM8Npje8bqFyRMYwewCMWl8QDcH0eUDmjEFqHT8il7c2WfiT-A_aem_AfUyBXWlvq8pHiKKiMs_-t16oHWo--YD8SI4y6tNelytnYYgBSV_2qZIegtEaatwMJb5Y2D0aB-onMPZWIn2oqzF","u":"ce5898f4f910","p":"product","rtyp":"product","rid":9053846733086};</script>
+<script id="__st">var __st={"a":87057629496,"offset":-10800,"reqid":"7df23de8-14da-4d7e-995e-a1120234ba94-1710334710","pageurl":"e6c4c0-92.myshopify.com\/products\/compre-1-leve2-cera-japonesa-cleanermax-2024-25?_pos=1\u0026_sid=b3834181c\u0026_ss=r","u":"c9cb71497f64","p":"product","rtyp":"product","rid":9046706127160};</script>
 <script>window.ShopifyPaypalV4VisibilityTracking = true;</script>
 <script>!function(o){o.addEventListener("DOMContentLoaded",function(){window.Shopify=window.Shopify||{},window.Shopify.recaptchaV3=window.Shopify.recaptchaV3||{siteKey:"6LeHG2ApAAAAAO4rPaDW-qVpPKPOBfjbCpzJB9ey"};var t=['form[action*="/contact"] input[name="form_type"][value="contact"]','form[action*="/comments"] input[name="form_type"][value="new_comment"]','form[action*="/account"] input[name="form_type"][value="customer_login"]','form[action*="/account"] input[name="form_type"][value="recover_customer_password"]','form[action*="/account"] input[name="form_type"][value="create_customer"]','form[action*="/contact"] input[name="form_type"][value="customer"]'].join(",");function n(e){e=e.target;null==e||null!=(e=function e(t,n){if(null==t.parentElement)return null;if("FORM"!=t.parentElement.tagName)return e(t.parentElement,n);for(var o=t.parentElement.action,r=0;r<n.length;r++)if(-1!==o.indexOf(n[r]))return t.parentElement;return null}(e,["/contact","/comments","/account"]))&&null!=e.querySelector(t)&&((e=o.createElement("script")).setAttribute("src","https://cdn.shopify.com/shopifycloud/storefront-recaptcha-v3/v0.6/index.js"),o.body.appendChild(e),o.removeEventListener("focus",n,!0),o.removeEventListener("change",n,!0),o.removeEventListener("click",n,!0))}o.addEventListener("click",n,!0),o.addEventListener("change",n,!0),o.addEventListener("focus",n,!0)})}(document);</script>
-<script data-source-attribution="shopify.loadfeatures" defer="defer" src="https://c2.cdn1tp.net/059a7606121f474fa3383f7eaf15dad4/js/load_feature-ff40b52654bbbc620eacf0b8fe273674fae033bb16a385571661d73b97ffccb1.js" crossorigin="anonymous"></script>
-<script data-source-attribution="shopify.dynamic-checkout" defer="defer" src="https://c2.cdn1tp.net/059a7606121f474fa3383f7eaf15dad4/js/features-1c0b396bd4d054b94abae1eb6a1bd6ba47beb35525c57a217c77a862ff06d83f.js" crossorigin="anonymous"></script>
+<script integrity="sha256-/0C1JlS7vGIOrPC4/ic2dPrgM7sWo4VXFmHXO5f/zLE=" data-source-attribution="shopify.loadfeatures" defer="defer" data-src="//e6c4c0-92.myshopify.com/cdn/shopifycloud/shopify/assets/storefront/load_feature-ff40b52654bbbc620eacf0b8fe273674fae033bb16a385571661d73b97ffccb1.js" crossorigin="anonymous"></script>
+<script integrity="sha256-HAs5a9TQVLlKuuHrahvWuke+s1UlxXohfHeoYv8G2D8=" data-source-attribution="shopify.dynamic-checkout" defer="defer" data-src="//e6c4c0-92.myshopify.com/cdn/shopifycloud/shopify/assets/storefront/features-1c0b396bd4d054b94abae1eb6a1bd6ba47beb35525c57a217c77a862ff06d83f.js" crossorigin="anonymous"></script>
 
 <style id="shopify-dynamic-checkout">.shopify-payment-button__button--hidden {
   visibility: hidden;
